tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-3.ny.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/super-traits-fail-3.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:12:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:12:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:12:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors; 1 warning emitted

